# 3DRender

./: .gitignore  CMakeLists.txt  Makefile.txt  README.md  Render  a.out  compile.sh  main.cpp  makefile  test.cpp
include/: GraphicsGems.h  Line3D.h  Point3D.h  Polyhedron.h  Prism.h  Screen.h  Space.h  Sphere.h  Vector3D.h
src/: Line3D.cpp  Point3D.cpp  Polyhedron.cpp  Prism.cpp  Screen.cpp  Space.cpp  Sphere.cpp  Vector3D.cpp
